--- a/ShopSphere_Frontend/src/index.css
+++ b/ShopSphere_Frontend/src/index.css
@@ -41,10 +41,13 @@ html {
 }
 
 @keyframes gradient-x {
-    0%, 100% {
+
+    0%,
+    100% {
         background-size: 200% 200%;
         background-position: left center;
     }
+
     50% {
         background-size: 200% 200%;
         background-position: right center;
